# gbm-reg

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
patients/: CUH197.toml  IM003.toml  IM008.toml
src/: __init__.py  classes.py  misc.py
src/preprocess/: __init__.py  ants_wrappers.py  mask.py  normalise.py  pipeline.py  run.py
src/registration/: exhaustive.py  grid_register.py  label_based.py  run.py  slab_io.py  slab_masks.py  slab_metrics.py  slab_pipeline.py  slab_registration.py  slab_visualise.py  slice_to_slice.py  virtual_slice.py  visualize_results.py  voxel_by_voxel.py
src/segment/: __init__.py  gmm.py  labels.py  medsam2.py  pipeline.py  run.py  swin_unetr.py  synthseg.py
src/visualise/: __init__.py  overlay.py  plotters.py  run.py  visualise_brain.py  visualise_slab.py
