[project]
name = "s2v-reg"
version = "0.1.0"
description = "MRI preprocessing, segmentation, and slab-to-volume registration pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antspyx>=0.6.3",
    "dcm2niix>=1.0.20250506",
    "hd-bet>=2.0.1",
    "matplotlib>=3.10.9",
    "monai>=1.5.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "requests>=2.33.1",
    "scipy>=1.15,<1.16",
    "simpleitk>=2.5.0",
]
